--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="column" fxFlex>
-    <mat-toolbar class="flex-shrink-1" style="height: 64px;" color="primary">
+    <mat-toolbar class="flex-shrink-1 mat-elevation-z6" style="height: 64px;" color="primary">
         <a href="#" routerLink="/dashboard" style="color: white; text-decoration: none;">
             <span>Lost Box</span>
         </a>
